Fixed Dark Mode functionality, added in RGB Decomposition page and tweaked some stuff on the Radial Clock CSS and HTML

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,21 @@ body{
     box-sizing: border-box;
     font-family: 'Roboto', Helvetica, sans-serif;
 }
-body{
-    background: white;
-    color: #121212;
-    transition: 0.5s;
+h1{
+    font-size: 48px;
+}
+.dark-mode a{
+    color: aquamarine;
 }
 body.dark-mode{
     background-color: #121212;
     color: white;
+}
+p{
+   display: flex;
+   flex-direction: column;
+   align-content: center;
+   justify-content: center; 
 }
 #bigBox{
     display: flex;
@@ -31,6 +38,10 @@ body.dark-mode{
     border-radius: 30px;
     box-shadow: 0 20px 20px rgba(0, 0 , 0, 0.19);
 }
+body {
+    background: white;
+    transition: 0.5s;
+}
 #ChangeTheme {
     width: 0;
     height: 0;
@@ -41,7 +52,7 @@ label {
     height: 15px;
     width: 60px;
     position: relative;
-    transform:rotate(90deg) translate(100px, -800px);
+    transform:rotate(90deg) translate(5vh, -42vw);
 }
 span.slide {
     position: absolute;
@@ -62,6 +73,34 @@ span.slide:before {
     transition: 0.5s;
     box-shadow: rgba(0, 0, 0, 0.21) 0px 0px 7px 1px;
 }
+.txt {
+    position: relative;
+    transform: translatex(45vw);
+}
+.txt p:nth-child(1) {
+    color: rgb(243, 76, 76);
+    font-weight: bold;
+    font-size: 1.1em;
+    transition: 0.5s;
+}
+.txt p:nth-child(2){
+    color: rgb(0, 225, 255);
+    font-weight: bold;
+}
 #ChangeTheme:checked + span.slide:before {
     transform: translatex(40px);
+ }
+  /* if dark-mode class is added set this background */
+body.dark-mode {
+    background: #353535;
+    color: white;
 }
+.dark-mode .txt p:nth-child(1){
+    color: rgb(0, 225, 255);
+    font-weight: normal;
+}
+.dark-mode .txt p:nth-child(2){
+    color: rgb(243, 76, 76);
+    font-weight: bold;
+}
+  
