--- a/css/styles2.css
+++ b/css/styles2.css
@@ -21,7 +21,63 @@ body.dark-mode{
     background-color: #121212;
     color: white;
 }
-canvas {
-	background: #002b36;
-	font-family: "Roboto", sans-serif;
+#ChangeTheme {
+    width: 0;
+    height: 0;
+    opacity: 0;
+}
+label {
+    display: block;
+    height: 15px;
+    width: 60px;
+    position: relative;
+    transform:rotate(90deg) translate(100px, -800px);
+}
+span.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #dadada;
+    border-radius: 30px;
+}
+span.slide:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: #fff;
+    border-radius: 50%;
+    top: -2px;
+    left: 0px;
+    transition: 0.5s;
+    box-shadow: rgba(0, 0, 0, 0.21) 0px 0px 7px 1px;
+}
+.txt {
+    position: relative;
+    transform: translatex(-50px);
+}
+.txt p:nth-child(1) {
+    color: rgb(243, 76, 76);
+    font-weight: bold;
+    font-size: 1.1em;
+    transition: 0.5s;
+}
+.txt p:nth-child(2){
+    color: rgb(0, 225, 255);
+    font-weight: bold;
+}
+body.dark-mode {
+    background: #353535;
+    color: white;
+}
+.dark-mode .txt p:nth-child(1){
+    color: rgb(0, 225, 255);
+    font-weight: normal;
+}
+.dark-mode .txt p:nth-child(2){
+    color: rgb(243, 76, 76);
+    font-weight: bold;
+}
+#ChangeTheme:checked + span.slide:before {
+    transform: translatex(40px);
 }
